--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @planningcenter/check-ins @planningcenter/people @planningcenter/registrations @planningcenter/services
+* @planningcenter/check-ins @planningcenter/registrations @planningcenter/services
